SFNRC version 0.1.01 (release date: TBD)
==================
Changes:
* Removed sp and rgdal dependencies. getCoords_DBHYDRO() and getCoords_EDEN() return SpatVectors.

SFNRC version 0.0.13 (release date: 2020-11-13)
==================
Changes:
* Updated DataForEver API to use SQL, allowing use on Windows operating systems (but still requiring a connection to NPS servers)
* Removed interp() function for spatial interpolation, and the many associated dependencies


SFNRC version 0.0.12 (release date: 2020-10-13)
==================
Changes:
* Added a DBHYDRO-oriented vignette
* removed RCurl dependency 
* getCoords_DBHYDRO pulls coordinates for DBHYDRO stations


SFNRC version 0.0.11 (release date: 2020-07-29)
==================
Changes:
* getDBHYDROhydro now accommodates downloads of instantaneous data from DBHYDRO
* getDBkey now has an option (enabled by default) to only report dbkeys for active time series (those with new data reported in the past 90 days)


SFNRC version 0.0.10 (release date: 2020-03-01)
==================
Changes:
* convertToEgret() conversion of abnormal parameter names to R-friendly versions is now internally consistent.


SFNRC version 0.0.9 (release date: 2019-11-13)
==================

Changes:
* period of record now defined by user inputs in getDBHYDROhydro() (function that uses DBKeys to download general data)
* more analysis tools, better integration with EGRETci
* convertToEgret() restricts date ranges for the sample and flow data to be the period of overlapping data. This reduces convergence problems in WRTDS survival regression.


SFNRC version 0.0.7 (release date: 2018-12-13)
==================
Changes:
* convertToEgret() adds compatibility with EGRET weighted regression modeling


SFNRC version 0.0.6 (release date: 2018-11-25)
==================
Changes:
* Unit tests and coverage reported
* DataForEver water quality data can be integrated with hydro data; getHydro() can call getWQ() 
* removed dfeCQ()

