@@ -8,6 +8,7 @@ export(dbhydro.proj)
 export(dbhydro.proj.batch)
 export(dbhydro.stn)
 export(dbhydro.stn.batch)
+export(downloadNWS)
 export(eBootReport)
 export(geoMean)
 export(getCoords_DBHYDRO)
@@ -28,6 +29,7 @@ export(procDERM)
 export(replaceBDLs)
 export(se)
 export(seas)
+export(summarizeNWS)
 export(unitConversion)
 importFrom(DBI,dbDriver)
 importFrom(DBI,dbGetQuery)
@@ -56,14 +58,21 @@ importFrom(odbc,dbDisconnect)
 importFrom(parallel,stopCluster)
 importFrom(plyr,ddply)
 importFrom(plyr,summarise)
+importFrom(stats,aggregate)
 importFrom(stats,ecdf)
 importFrom(stats,mad)
 importFrom(stats,median)
 importFrom(stats,reshape)
 importFrom(stats,sd)
+importFrom(terra,crop)
 importFrom(terra,crs)
+importFrom(terra,extract)
+importFrom(terra,plot)
 importFrom(terra,project)
+importFrom(terra,rast)
+importFrom(terra,values)
 importFrom(terra,vect)
+importFrom(terra,writeRaster)
 importFrom(utils,read.csv)
 importFrom(utils,read.delim)
 importFrom(utils,write.table)
